# KTDL

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: categories.yaml  settings.yaml
data/selection/: feature_selection.json  problem_spec.json  sampling_plan.json  sampling_plan_shopee.json  sampling_plan_tiki.json  selection_report.md
docs/: PROJECT_STRUCTURE.md  collection_guide.md  data_dictionary.md  selection_guide.md
models/: README.md
scripts/: run_collection.sh
src/: __init__.py  config_loader.py  constants.py
src/evaluation/: __init__.py
src/mining/: __init__.py
src/pipeline/: __init__.py  run.py
src/preprocessing/: __init__.py  clean.py  crawl.py  crawl_errors.py  crawl_progress.py  crawl_utils.py  lazada_browser.py  lazada_crawler.py  run_collection.py
src/schema/: __init__.py  enums.py  product.py
src/selection/: __init__.py  feature_selection.py  problem_spec.py  run.py  sampling_plan.py  validate_selection.py
src/transformation/: __init__.py
