[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lazada-product-classification"
version = "0.1.0"
description = "Data Mining — phân loại sản phẩm Lazada (4 lớp)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "PyYAML>=6.0.0",
    "pydantic>=2.5.0",
    "tqdm>=4.66.0",
    "requests>=2.31.0",
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.8.0", "seaborn>=0.13.0"]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
